Link from the Edit Database page to scripts that use the DB.
When a script does not get fully installed (perhaps due to Virtualmin not being able to call its setup wizard), it is marked as a partial failure rather than a complete failure. This allows it be easily removed without leaving files behind.
Wordpress, WPMU and bbPress are now downloaded from the Virtualmin website in preference to their developer's sites, as there is no way to fetch specific older versions from the original site.
The alias to bounce all mail to unknown addresses in a domain is no longer created when using Postfix, as it does not appear to be necessary.
Updated the phpPgAdmin script installer to version 4.2, phpCOIN to 1.4.1, TikiWiki to 1.9.11, bbPress to 0.9.0.1, Coppermine to 1.4.18, Joomla to 1.5.2, OpenX to 2.4.5, and SugarCRM to 5.0.0c.
Added a Module Config option to prevent creation of the deniedssh group.
Reduced the memory needed to migrated Plesk backups, by not reading the whole source file into RAM for parsing.
When creating a sub-server whose prefix is in use by another domain, a non-clashing prefix for users is automatically selected.
International domain names are now automatically converted to the IDN xn-- format when creating, and converted back for display.
When upgrading scripts in multiple domains at once, added a confirmation page top display and select the domains that will be effected.
The Virtualmin master administrator can now control which domains and users are limited to their home directories when logging in via FTP, using the new FTP Directory Restrictions page.
Cpanel sub-domains are now re-created when migrating their backups.
The default PHP version for one or more virtual servers can be changed with --php-version option to modify-web.pl.
When migrating backups from Postfix-style ~/Maildir inboxes to Sendmail-style /var/mail, mail files are properly copied across.
Changed the content style chooser to display thumbnail images in the drop-down menu.