@@ -896,3 +896,4 @@ Cpanel sub-domains are now re-created when migrating their backups.
 The default PHP version for one or more virtual servers can be changed with --php-version option to modify-web.pl.
 When migrating backups from Postfix-style ~/Maildir inboxes to Sendmail-style /var/mail, mail files are properly copied across.
 Changed the content style chooser to display thumbnail images in the drop-down menu.
+Added a script installer for Django, a development framework for Python applications.
